--- a/contact.html
+++ b/contact.html
@@ -165,10 +165,10 @@
                                         </a><br/>
                                     </div>
 
-                                    <div class="col-md-12">
-                                        <span><i class="fa fa-rss social-icon rss_icon"></i></span>
-                                        <span><i class="fa fa-twitter social-icon twitter_icon"></i></span>
-                                        <span><i class="fa fa-facebook social-icon facebook_icon"></i></span>
+                                      <div class="col-md-12" style="background-color: #f0eedd; width: 40%; border-radius:12px;">
+                                        <span><i class="fa fa-instagram"  style="font-size:24px;color:#000; padding: 10px;"></i></span>
+                                        <span><i class="fa fa-twitter" style="font-size:24px;color:#6dc8f2; padding: 10px;"></i></span>
+                                        <span><i class="fa fa-facebook" style="font-size:24px;color:#435dab; padding: 10px;"></i></span>
                                     </div>
 
                                 </div>
