--- a/gallery.html
+++ b/gallery.html
@@ -8,13 +8,10 @@
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,400italic'>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">     
-    <link rel="stylesheet" type="text/css" href="css/magnific-popup.css">   <!-- Magnific Popup core CSS file -->
+    <link rel="stylesheet" type="text/css" href="css/magnific-popup.css">  
     <link rel="stylesheet" type="text/css" href="css/style.css">
-<!--
-Accord Template
-http://www.templatemo.com/tm-478-accord
--->
-    <title>Accord - Gallery</title>
+
+    <title>Jatin-Art-Gallery</title>
 </head>
 
 <body class="gallery-page">
@@ -203,9 +200,8 @@ http://www.templatemo.com/tm-478-accord
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/imagesloaded.3.1.8.min.js"></script>
-    <script src="js/jquery.masonry.3.2.1.min.js"></script> <!-- http://masonry.desandro.com/ -->
-    <script src="js/jquery.magnific-popup.min.js"></script> <!-- http://dimsemenov.com/plugins/magnific-popup/ -->
-
+    <script src="js/jquery.masonry.3.2.1.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script> 
     <script>
         function init_masonry(){
           var $container = $('#content');
